--- a/App/templates/app/layout.html
+++ b/App/templates/app/layout.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/dc.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/custom.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/navbar.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'app/content/about-style.css' %}" />
+{#    <link rel="stylesheet" type="text/css" href="{% static 'app/content/about-style.css' %}" />#}
 
     <script src="{% static 'app/scripts/bootstrap.js' %}"></script>
     <script src="{% static 'app/scripts/jquery.min.js' %}"></script>
